--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,15 @@ before_install:
   - docker build -t prashitprakhar/docker-react-demo -f Dockerfile.dev .
 script:
   - docker run -e CI=true prashitprakhar/docker-react-demo npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-114558203623"
+  bucket_path: "docker-react"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
